# crawler_ws

./: README.md
src/description/: CMakeLists.txt  package.xml
src/description/config/: bridge.yaml  controllers.yaml  rviz_config.rviz
src/description/launch/: gazebo.launch.py  ign.launch.py  rsp.launch.py
src/description/meshes/: 20teeth_2gt_3mm_pulley.part  20teeth_2gt_3mm_pulley.stl  20teeth_2gt_3mm_pulley__2.part  20teeth_2gt_3mm_pulley__2.stl  20teeth_2gt_3mm_pulley__3.part  20teeth_2gt_3mm_pulley__3.stl  20teeth_2gt_3mm_pulley__4.part  20teeth_2gt_3mm_pulley__4.stl  60teeth_2gt_5mm_pulley.part  60teeth_2gt_5mm_pulley.stl  60teeth_2gt_5mm_pulley__2.part  60teeth_2gt_5mm_pulley__2.stl  60teeth_2gt_5mm_pulley__3.part  60teeth_2gt_5mm_pulley__3.stl  60teeth_2gt_5mm_pulley__4.part  60teeth_2gt_5mm_pulley__4.stl  6in_wheel.part  6in_wheel.stl  6in_wheel__2.part  6in_wheel__2.stl  6in_wheel__3.part  6in_wheel__3.stl  6in_wheel__4.part  6in_wheel__4.stl  air_fill_valve.part  air_fill_valve.stl  base_link.part  base_link.stl  cable_connector.part  cable_connector.stl  camera_dome.part  camera_dome.stl  esc.part  esc.stl  esc__2.part  esc__2.stl  esc__3.part  esc__3.stl  esc__4.part  esc__4.stl  (+30 more)
src/description/urdf/: gazebo.xacro  gazebo_ros2_control.xacro  ign.xacro  ign_ros2_control.xacro  my_bot.urdf.xacro
src/description/worlds/: my_world.sdf
